# Bio-AI

./: .pre-commit-config.yaml  .yamllint.yaml  FATSECRET_INTEGRATION.md  test.txt
.github/: copilot-instructions.md
bio-data/: sample-food.json  sample-profile.json
bio-design/: boti.html  index.html  package.json  vite.config.js
bio_ai/: README.md  pubspec.yaml
bio_ai_server/: .dockerignore  .env.dev  .env.example  .env.prod  .env.stage  README.md  (+12 more)
bio_nexus/: .env.example  Dockerfile  README.md  design.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
bio_nexus/.github/workflows/: ci.yml
bio_nexus/app/: main.py  schemas.py
bio_nexus/app/api/: deps.py
bio_nexus/app/api/v1/: __init__.py  router.py
bio_nexus/app/api/v1/endpoints/: food.py  metrics.py  storage.py  users.py  vision.py
bio_nexus/app/core/: config.py
bio_nexus/app/db/: mongodb.py
bio_nexus/app/s3/: __init__.py  client.py
bio_nexus/app/services/: fatsecret.py  storage.py
bio_nexus/helm/: Chart.yaml  values.yaml
bio_nexus/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
bio_nexus/scripts/: init_mongo.py
bio_nexus/tests/: test_basic.py  test_fatsecret.py  test_search.py
bio_worker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bio_worker/app/: cli.py  main.py  worker.py
bio_worker/app/core/: config.py
bio_worker/app/services/: archive_manager.py
bio_worker/k8s/: cronjob-archive.yaml  deployment.yaml
bio_worker/tests/: test_archive.py  test_worker.py
bio_worker/tests/integration/: test_e2e_worker.py
(+460 files in other folders)
